--- a/ps-be/pom.xml
+++ b/ps-be/pom.xml
@@ -305,6 +305,13 @@
             <version>${commons-lang3.version}</version>
         </dependency>
         
+        <!-- Apache Commons Exec - 执行系统命令 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-exec</artifactId>
+            <version>1.3</version>
+        </dependency>
+        
         <!-- JSoup - HTML解析和XSS过滤 -->
         <dependency>
             <groupId>org.jsoup</groupId>
