refactor(build): 将打包方式从 war 改为 jar
- 修改 pom.xml 中的 packaging 元素值为 jar
- 移除 maven-war-plugin 插件配置
- 解决打包时 failOnMissingWebXml 的配置冗余问题
- 简化构建配置，适应新的部署需求

--- a/ps-be/pom.xml
+++ b/ps-be/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>ps-be</artifactId>
     <version>1.0.0</version>
 
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <name>党校后台</name>
 
     <properties>
@@ -459,16 +459,6 @@
         </resources>
         
         <plugins>
-            <!-- Maven WAR插件 - 解决failOnMissingWebXml错误 -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-war-plugin</artifactId>
-                <version>3.2.3</version>
-                <configuration>
-                    <failOnMissingWebXml>false</failOnMissingWebXml>
-                </configuration>
-            </plugin>
-            
             <!-- Maven编译器插件 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
