feat(captcha): 优先支持外部目录加载滑块验证码资源
- 增加配置项externalRootDir，支持外部验证码图片根目录的动态指定
- 优先从外部目录读取验证码背景图、滑块图及坐标文件，若外部资源不可用则回退到内部资源
- 优化图片资源扫描策略，分别扫描内部资源和外部目录中0-50编号的验证码图片
- 内部读取坐标文件改为静态映射加自动扫描相结合的方式，增强鲁棒性
- 增加外部目录不存在或文件格式异常时的日志提示和异常捕获
- 添加开发环境配置示例，详细说明外部目录使用方法及示例路径配置

--- a/ps-be/src/main/resources/config/env/dev/application-dev.yml
+++ b/ps-be/src/main/resources/config/env/dev/application-dev.yml
@@ -89,6 +89,26 @@ logging:
 debug: false
 
 ############################################################
+#############  验证码配置
+############################################################
+captcha:
+  image:
+    # 外部验证码图片根目录（可选配置）
+    # 如果配置了外部根目录，系统将优先使用外部目录中的验证码资源
+    # 如果外部目录不存在或为空，系统将回退到内部JAR资源
+    # 外部目录结构应与内部META-INF目录结构完全一致：
+    # external-dir/
+    # ├── cut-image/
+    # │   ├── slider/     # 滑块验证码（当前使用）
+    # │   ├── bgimage/    # 背景图片验证码
+    # │   ├── rotate/     # 旋转验证码
+    # │   └── template/   # 模板文件
+    # └── ...
+    external-dir: "/root/jiuxi/lab/ps/captcha-resources"  # Windows路径示例
+    # external-dir: "/opt/ps/captcha-resources"  # Linux路径示例
+    # external-dir: ""  # 留空则只使用内部资源
+
+############################################################
 #############  监控配置
 ############################################################
 jiuxi:
