--- a/ps-be/src/main/resources/config/db/database-dev.yml
+++ b/ps-be/src/main/resources/config/db/database-dev.yml
@@ -9,7 +9,7 @@ spring:
     driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mariadb://alilaoba.cn:13307/ps-bmp?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     username: root
-    password: W4HV=QxtHz
+    password: $D8BZ8Qmav
     druid:
       initial-size: 5
       min-idle: 5
@@ -44,7 +44,7 @@ topinfo:
       # 用户名
       username: root
       # 密码
-      password: W4HV=QxtHz
+      password: $D8BZ8Qmav
       ## 最新连接数（可选）， 默认：5
       minIdle: 5
       ## 最大连接数（可选）， 默认：500
@@ -55,4 +55,4 @@ topinfo:
     tenant: false
     ## 忽略不需要添加租户条件的表, 数组（可选）
     ignore-tenant-tables:
-      - test
+    - test
